--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="assets/huelocalsdk.jar"/>
+	<classpathentry kind="lib" path="assets/huesdkresources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
